--- a/laurux-pos/laurux-pos_0.3/debian/changelog
+++ b/laurux-pos/laurux-pos_0.3/debian/changelog
@@ -1,3 +1,9 @@
+laurux-pos (0.3-1ubuntu1) trusty; urgency=low
+
+  * laurux-pos 0.3 released.
+
+ -- freddy <freddy@linuxtribe.fr>  Wed, 26 Jul 2017 11:19:46 +0200
+
 laurux-pos (0.2-1ubuntu1) trusty; urgency=low
 
   * laurux-pos 0.2 released.
